--- a/app/src/main/res/menu/add_exercise_toolbar.xml
+++ b/app/src/main/res/menu/add_exercise_toolbar.xml
@@ -6,7 +6,8 @@
         android:id="@+id/searchExercise"
         android:icon="@drawable/ic_search"
         android:title="Search"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 
     <item
         android:id="@+id/addExercise"
