--- a/app/src/main/res/layout/item_workout_routine_set.xml
+++ b/app/src/main/res/layout/item_workout_routine_set.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingVertical="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clExerciseTitle"
@@ -61,5 +62,13 @@
         android:text="Add set"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rvExerciseSets" />
+
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAddSet" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
