--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.WorkoutOrganizerApp" parent="Theme.Material3.DayNight">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/dark_green</item>
+        <item name="colorPrimaryVariant">@color/amber</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/raisin_black</item>
+        <item name="colorSecondaryVariant">@color/dark_green</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -21,15 +21,6 @@
 
     <style name="FabShapeStyle" parent="ShapeAppearance.Material3.SmallComponent">
         <item name="cornerSize">25%</item>
-    </style>
-
-    <style name="AppTheme.FullScreenDialog" parent="Theme.Material3.DayNight.Dialog">
-        <item name="colorPrimaryDark">@color/purple_500</item>
-        <item name="colorAccent">@color/teal_200</item>
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="android:windowIsFloating">false</item>
-        <item name="android:windowBackground">@android:color/black</item>
-        <item name="actionMenuTextColor">@color/teal_200</item>
     </style>
 
 </resources>
